# DesignPatternsCpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
AbstractFactory/: AbstractFactory.cpp  AbstractFactory.h
Adapter/: Adapter.cpp  Adapter.h  BaseAdapter.cpp  GoodExample.cpp  USBAdapter.cpp
Bridge/: Bridge.cpp  Bridge.h  DrawingBridge.cpp
Builder/: Builder.cpp  Builder.h  HtmlBuilder.cpp  UserBuilder.cpp
CRTP/: CRTP.cpp  CRTP.h  ObjectCounter.cpp  ObjectCounter.h
ChainOfResponsibility/: ChainOfResponsibility.cpp  ChainOfResponsibility.h  Example2.cpp
Command/: Command.cpp  Command.h  Command_MethodPtr.cpp
Composite/: Composite.cpp  Composite.h
CopyAndSwap/: CopyAndSwap.cpp  CopyAndSwap.h
Decorator/: Decorator.cpp  Decorator.h  ShapeDecorator.cpp  ShapeDecorator.h
ExecutorAdapter/: ExecutorAdapter.cpp  ExecutorAdapter.h
FabricMethod/: FabricMethod.cpp  FabricMethod.h  FabricMethod2.cpp
Facade/: Facade.cpp  Facade.h
Filter/: Filter.cpp  Filter.h
Flyweight/: Flyweight.cpp  Flyweight.h  IconFlyweight.cpp
Interpreter/: Interpreter.cpp  Interpreter.h
Iterator/: Iterator.cpp  Iterator.h  RangeIterator.cpp
LazyInitialization/: LazyInitialization.cpp  LazyInitialization.h
Mediator/: ChatMediator.cpp  Mediator.cpp  Mediator.h
Memento/: Memento.cpp  Memento.h
Named_Parameter_Idiom/: NamedParameter.cpp  NamedParameter.h
ObjectPools/: ObjectPools.h  ObjectPoolsExtended.cpp  ObjectPoolsSimple.cpp
Observer/: Observer.cpp  Observer.h  ObserverBasic.cpp  ObserverSubject.cpp
Policy/: Policy.cpp  Policy.h
Prototype/: Prototype.cpp  Prototype.h
Proxy/: CarProxy.cpp  Document.cpp  Proxy.h  Subject.cpp
RAII/: RAII.cpp  RAII.h
Singleton/: Singleton.cpp  Singleton.h
State/: State.cpp  State.h
Strategy/: Strategy.cpp  Strategy.h
TagDispatching/: TagDispatching.cpp  TagDispatching.h
TemplateMethod/: TemplateMethod.cpp  TemplateMethod.h  TemplateMethod_ExampleThree.cpp  TemplateMethod_ExampleTwo.cpp
TypeErasure/: TypeErasure.cpp  TypeErasure.h
VirtualConstructor/: VirtualConstructor.cpp  VirtualConstructor.h
Visitor/: CarVisitor.cpp  DynamicComponentsVisitor.cpp  StockVisitor.cpp  Visitor.cpp  Visitor.h
